--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
-    <div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit,
-        nobis quae ratione assumenda excepturi laudantium doloremque incidunt,
-        ad fuga nostrum unde. Fugit consequatur animi corrupti hic quod
-        assumenda quasi repellat?
-      </p>
-    </div>
+    <p class="red">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni veritatis
+      officia dicta iste voluptate quo autem itaque beatae distinctio.
+      Aspernatur.
+    </p>
+    <p class="red">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eius,
+      inventore delectus modi voluptas odit suscipit nemo reiciendis cum
+      molestiae!
+    </p>
+    <p class="blue">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+      consequatur quia autem praesentium quibusdam nulla quisquam, et iure
+      consequuntur quidem?
+    </p>
   </body>
 </html>
