box model padding

--- a/index.html
+++ b/index.html
@@ -9,20 +9,7 @@
   </head>
 
   <body>
-    <p class="red">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni veritatis
-      officia dicta iste voluptate quo autem itaque beatae distinctio.
-      Aspernatur.
-    </p>
-    <p class="red">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eius,
-      inventore delectus modi voluptas odit suscipit nemo reiciendis cum
-      molestiae!
-    </p>
-    <p class="blue">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-      consequatur quia autem praesentium quibusdam nulla quisquam, et iure
-      consequuntur quidem?
-    </p>
+    <div class="box">
+    </div>
   </body>
 </html>
