--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
 
   <body>
-    <div class="box">
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
+      soluta. Ipsum doloribus minus dolore amet numquam ea vel, quaerat fugit
+      ipsa porro deleniti inventore nemo mollitia, nam facilis accusantium
+      corrupti.
     </div>
   </body>
 </html>
