--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
   <body>
     <div>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
-      soluta. Ipsum doloribus minus dolore amet numquam ea vel, quaerat fugit
-      ipsa porro deleniti inventore nemo mollitia, nam facilis accusantium
-      corrupti.
+      Welcome to
     </div>
+    <button>Contrast</button>
   </body>
 </html>
